--- a/pubsubplus/templates/podModRbac.yaml
+++ b/pubsubplus/templates/podModRbac.yaml
@@ -1,5 +1,4 @@
-# Fix rbac
-{{- if semverCompare ">=1.8-0" .Capabilities.KubeVersion.GitVersion }}
+# Deployment requires the capability of patching the pod to indicate active state for load balancing
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
@@ -10,7 +9,7 @@ rules:
   verbs: ["patch"]
 ---
 kind: ClusterRoleBinding
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: {{ template "solace.fullname" . }}-serviceaccounts-to-podtagupdater
 roleRef:
@@ -21,5 +20,4 @@ subjects:
 - kind: Group
   name: system:serviceaccounts
   apiGroup: rbac.authorization.k8s.io
-{{- end }} #end if semverCompare
 
