--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ script:
   - popd
   - kubectl -n kube-system create serviceaccount tiller
   - kubectl create clusterrolebinding tiller --clusterrole cluster-admin --serviceaccount=kube-system:tiller
-  - helm init --service-account=tiller
+  - helm init --service-account=tiller; kubectl rollout status -w deployment/tiller-deploy -n kube-system
   - helm lint pubsubplus
   - helm install --set solace.size=dev,solace.redundancy=true,solace.usernameAdminPassword=admin --name my-release pubsubplus
   - kubectl get statefulset,svc,pods,pvc,pv --show-labels
