Removed deprecated APIs, documentation updates (#67)
* Fixed outdated documentation of upgrade procedure. Also added
clarification to StorageClass configuration.

* Added documentation about options to expose the message broker service
and way to configure.

* Added explicit ha ports to  "solace-discovery" template
and fixed deprecated use of tolerate-unready-endpoints

* Updating deprecated beta APIs

* Added mandatory selector.matchLabels with the use of the updated api

* Included minimum Kubernetes version

* Retry pod label update using legacy method if not successful in
certain environments

* Remove dead code with minimum supported k8s version of 1.9

* Added back original semp port to the list of internal service ports used.

* Removed misleading default case when using existingVolume value option
without provider

--- a/solace/templates/service-discovery.yaml
+++ b/solace/templates/service-discovery.yaml
@@ -11,9 +11,18 @@ metadata:
     service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
 spec:
   ports:
-    - port: 8080
-      name: semp
+  - port: 8080
+    name: semp
+  - port: 8741
+    name: ha-mate-link
+  - port: 8300
+    name: ha-conf-sync0
+  - port: 8301
+    name: ha-conf-sync1
+  - port: 8302
+    name: ha-conf-sync2
   clusterIP: None
   selector:
     app: {{ template "solace.name" . }}
     release: {{ .Release.Name }}
+  publishNotReadyAddresses: true
