--- a/.travis.yml
+++ b/.travis.yml
@@ -79,13 +79,11 @@ after_success:
 - echo "GKE cluster deployment tested"
 - echo "Messaging tested"
 - if [ "$TRAVIS_PULL_REQUEST" = "false" ] && [ "$TRAVIS_BRANCH" = "HelmReorg" ]; then
--   # Create chart variants
--   docs/helm-charts/create-chart-variants.sh
+-   docs/helm-charts/create-chart-variants.sh # Create chart variants
 -   git config --global user.email "travis@travis-ci.org"
 -   git config --global user.name "travis-ci"
--   mkdir gh-pages
+-   mkdir gh-pages # Now update gh-pages
 -   git clone --quiet --branch=gh-pages https://${GH_TOKEN}@github.com/SolaceDev/solace-kubernetes-quickstart gh-pages > /dev/null 2>&1
--   # Now update gh-pages
 -   mv pubsubplus-*.tgz gh-pages/helm-charts/
 -   helm repo index gh-pages/helm-charts/ --url https://solacedev.github.io/solace-kubernetes-quickstart/helm-charts
 -   cd gh-pages
