--- a/pubsubplus/Chart.yaml
+++ b/pubsubplus/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
-description: Deploy Solace PubSub+ Message Broker Singleton or HA Cluster onto a Kubernetes Cluster
+description: Deploy Solace PubSub+ Message Broker Singleton or HA redundancy group onto a Kubernetes Cluster
 name: pubsubplus
 version: 2.0.0
 icon: https://solace.com/wp-content/uploads/2018/05/Solace_Logo_Green_360x100-1.png
@@ -19,12 +19,12 @@ keywords:
 - solace
 - pubsubplus
 - pubsub+
-- message broker
-- message queue
+- advanced event broker
 - event broker
 - event mesh
 - event portal
 - event-driven integration
 - event streaming
 - event management
-- advanced event broker
+- message broker
+- message queue
